* Switched to a different unicode character as the "widget saver" that wraps all widgets to ensure Chrome cuts, copies and pastes them intact rather than copying them only partially and creating an impressive mess. The 8288 character was nice on Macs, but in Windows Chrome it shows up as a box, ouch. The 65279 zero width non-break space character appears to work fine in both Windows Chrome and Mac Chrome * widget saver characters removed on save * apostrophe:migrate strips out old widget saver characters (I refuse to introduce this as a filter at page-view time forever) * First slideshow image is visible again in the main editor, c'maaaan * apos.globalReplace is available client side, this is just the non-regex global replace function String doesn't have

--- a/public/css/editor.less
+++ b/public/css/editor.less
@@ -421,7 +421,6 @@ body
 .apos-editor
 {
   min-height: 400px;
-  
 }
 
 .apos-editor .apos-editable
@@ -432,6 +431,11 @@ body
   border: 1px solid rgb(221, 221, 221);
   padding: 10px;
   &:focus{outline:none;}
+  // Make sure the first image is visible in the slideshow's in-editor preview
+  .apos-slideshow-image
+  {
+    opacity: 1.0;
+  }
 }
 
 .apos-center
